# ESProbe

./: .gitattributes  .gitignore  LICENSE  README.md
fw/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
fw/components/DAP/: CMakeLists.txt
fw/components/DAP/config/: DAP_config.h
fw/components/DAP/include/: gpio_common.h  gpio_op.h  swo.h
fw/components/DAP/source/: DAP_vendor.c  spi_switch.c
fw/components/USBIP/: CMakeLists.txt  usb_descriptor.c  usb_descriptor.h  usb_handle.c
fw/components/elaphureLink/: CMakeLists.txt  elaphureLink_protocol.c  elaphureLink_protocol.h
fw/main/: CMakeLists.txt  DAP_handle.c  DAP_handle.h  Kconfig.projbuild  main.c  tcp_server.c  uart_bridge.c  usbip_server.c  wifi_configuration.h  wifi_handle.c
fw/scripts/: test_uart_bridge.py
hardware/: .gitignore  ESProbe.eprj2  README.md
hardware/3d/: ESProbe上.stl  ESProbe下.stl
