idf_component_register(
    SRCS
        "main.c"
        "timer.c"
        "tcp_server.c"
        "usbip_server.c"
        "DAP_handle.c"
        "uart_bridge.c"
        "wifi_handle.c"
    INCLUDE_DIRS
        "."
        ".."
    REQUIRES
        "driver"
        "esp_wifi"
        "esp_event"
        "esp_netif"
        "nvs_flash"
        "mdns"
        "freertos"
        "lwip"
        "DAP"
        "USBIP"
)
