idf_component_register(
    SRCS
        "source/DAP.c"
        "source/DAP_vendor.c"
        "source/JTAG_DP.c"
        "source/SW_DP.c"
        "source/SWO.c"
        "source/spi_op.c"
        "source/spi_switch.c"
        "source/dap_utility.c"
        "source/swd_host.c"
    INCLUDE_DIRS
        "config"
        "include"
        ".."
    REQUIRES
        "driver"
        "freertos"
    PRIV_REQUIRES
        "main"
)
